fixed
body spills to the right of viewport border

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: whitesmoke;
-  width: 100vw;
+  width: 100%;
 }
 
 h1,
